<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projeto.projetoexperiencias.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/rel_gio_anal_gico"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/analogClock1"
        android:layout_centerHorizontal="true"
        android:text="@string/rel_gio_digital"
        android:textSize="22sp" />

    <AnalogClock
        android:id="@+id/analogClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/dadosData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/digitalClock1"
        android:layout_centerHorizontal="true"
        android:text="@string/dados_data"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/analogClock1"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/digitalClock1"
        android:layout_below="@+id/dadosData"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="18dp"
        android:onClick="limpaBase"
        android:text="@string/prosseguir" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="37dp" >

        <Button
            android:id="@+id/buttonEntradaManha"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/e_m"
            android:onClick="prossegue"
            android:text="@string/e_m" />

        <Button
            android:id="@+id/buttonSaidaManha"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/s_m"
            android:onClick="prossegue"
            android:text="@string/s_m" />

        <Button
            android:id="@+id/buttonEntradaTarde"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/e_t"
            android:onClick="prossegue"
            android:text="@string/e_t" />

        <Button
            android:id="@+id/buttonSaidaTarde"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/s_t"
            android:onClick="prossegue"
            android:text="@string/s_t" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="mostraResumo"
        android:text="@string/ver_resumo" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_alignTop="@+id/button2"
        android:onClick="verPontoHoje"
        android:text="Ver pontos" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/analogClock1"
        android:layout_marginTop="28dp"
        android:onClick="fechaApp"
        android:text="Fechar" />

</RelativeLayout>