<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projeto.projetoexperiencias.ResultadoActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/resultHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/resulthorario"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dadosData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultHorario"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/dadosdata"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/horarioRegistrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dadosData"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/horarioregistrado"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
